--- a/app/decorator.html
+++ b/app/decorator.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 
+<div id="log"></div>
 
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/underscore/underscore-min.js"></script>
 <script src="scripts/decorator/decorator.js"></script>
 </body>
 </html>
